# fu

./: .cursorrules  Cargo.toml  LICENSE  Makefile  README.md
benches/: render.rs
docs/superpowers/plans/: 2026-03-30-hist-perf.md  2026-03-30-log-scale-histogram-filter.md
docs/superpowers/specs/: 2026-03-30-hist-perf-design.md  2026-03-30-log-scale-histogram-filter-design.md
img/: render.py
showcase/: 01-line-charts.sh  02-scatter.sh  03-bar-hist-count.sh  04-color-and-options.sh  _helpers.sh  compare.sh
src/: canvas.rs  cli.rs  color.rs  data.rs  hist.rs  lib.rs  main.rs  plot.rs  term.rs
